Wed Aug  9 13:40:31 2000  Robin Ericsson  <robin@noname4us.com>

	* configure.in, po/de.po: Added german translation.

Wed Aug  2 15:59:36 2000  Robin Ericsson  <robin@noname4us.com>

	* Initial sv.po, most of the things is translated.

Tue Jul 25 16:04 2000  Jordi Mallach  <jordi@debian.org>
	* Cosmetic fixes: unify button labels, MUD and AMCL nomeclature.
	* Reformat or delete redundant comments in the sources. We've had an
	  AUTHORS file for a while.
	* Improvements in help strings, etc.

Tue Jul 25 10:49:57 2000  Robin Ericsson  <robin@noname4us.com>

	* acconfig.h: added #undef ENABLE_MCCP

	* configure.in: Added --enable-mccp as option.

	* src/net.c [open_connection,read_from_connection]: made some changes
	so AMCL can compile with MCCP as it don't really seems to work right now.

Thu Jul 20 17:20 2000  Jordi Mallach  <jordi@debian.org>
	* Added internationalization support.
	  + Added gettext calls to all strings. Affects action.c, amcl.c,
	    alias.c, color.c, init.c, keybind.c, map.c, modules.c,
	    modules_api.c, net.c, prefs.c, version.c, window.c and wizard.c.
	  + added libintl.h include in all the gettextized files.
	  + src/amcl.c: added locale.h include and setlocale() and
	    textdomain calls in main().
	  + Added intl/ and po/ directories.
	  + aclocal.m4: added needed macros by gettext.
	  + acconfig.h: added NLS config options.
	  + configure.in, Makefile.am, Makefile.in, src/Makefile.in: tweaked
	    paths, added variables needed for po making and added ABOUT-NLS
	    to the documentation.
	* Corrected a selection of typos while browsing the code, specially
	  in src/alias.c and src/wizard.c.
	* Initial es.po. It's not complete, but only the automapper needs to
	  be translated, the rest is finished.

Mon Jul 17 16:04:20 2000  Robin Ericsson  <robin@noname4us.com>

	* configure.in: added check for zlib, and if, enable MCCP.

	* src/Makefile.am: added mccpDecompress.[ch].
