@@ -1,3 +1,9 @@
+Fri Aug 11 18:32:14 2000  Jordi Mallach  <jordi@debian.org>
+	* src/color.c, src/window.c: fix button labels that remained
+	  unchanged, woops (updated *.po's manually, sorry for
+	  inconveniences).
+	* BUGS: add the gdk errors in color.c to the buglist.
+
 Wed Aug  9 13:40:31 2000  Robin Ericsson  <robin@noname4us.com>
 
 	* configure.in, po/de.po: Added german translation.
